<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">"FoodScanner"</string>

    <!-- Fuzzy -->
    <string name="nav_menu_title_scanner">"Scanner"</string>

    <!-- Fuzzy -->
    <string name="nav_menu_title_history">"History"</string>

    <!-- Fuzzy -->
    <string name="scanner_search_hint">"Enter barcode"</string>
    <string name="exception_unknown">"Unknown error occured, please try again!"</string>

    <!-- Fuzzy -->
    <string name="exception_product_offline">"Those informations may not be up to date!"</string>

    <!-- Fuzzy -->
    <string name="details_not_found_title">"Product not found"</string>

    <!-- Fuzzy -->
    <string name="enum_lang">"ENGLISCH"</string>
    <string name="exception_no_internet">"No Internet! Check your connection."</string>

    <!-- Fuzzy -->
    <string name="details_toolbar_title">"Result"</string>

    <!-- Fuzzy -->
    <string name="details_nutrients_table_html"><![CDATA[<!DOCTYPE html><html><head> <meta charset="UTF-8"> <style> @charset "UTF-8"; html, body { height: 100%; } html { display: table; margin: auto; } body { display: table-cell; font-size: small; line-height: 1.4; vertical-align: middle; } p { margin: 0; } .performance-facts { border: 1px solid black; float: left; margin: 0; padding: 0.5rem; width: 90; } .performance-facts table { border-collapse: collapse; } .performance-facts__title { font-size: 2rem; font-weight: bold; margin: 0 0 0.25rem 0; } .performance-facts__header { border-bottom: 10px solid black; margin: 0 0 0.5rem 0; padding: 0 0 0.25rem 0; } .performance-facts__header p { margin: 0; } .performance-facts__table, .performance-facts__table--small, .performance-facts__table--grid { width: 100%; } .performance-facts__table thead tr th, .performance-facts__table--small thead tr th, .performance-facts__table--grid thead tr th, .performance-facts__table thead tr td, .performance-facts__table--small thead tr td, .performance-facts__table--grid thead tr td { border: 0; } .performance-facts__table th, .performance-facts__table--small th, .performance-facts__table--grid th, .performance-facts__table td, .performance-facts__table--small td, .performance-facts__table--grid td { border-top: 1px solid black; font-weight: normal; padding: 0.25rem 0; text-align: left; white-space: nowrap; } .performance-facts__table td:last-child, .performance-facts__table--small td:last-child, .performance-facts__table--grid td:last-child { text-align: right; } .performance-facts__table .blank-cell, .performance-facts__table--small .blank-cell, .performance-facts__table--grid .blank-cell { border-top: 0; width: 1rem; } .performance-facts__table .thick-row th, .performance-facts__table--small .thick-row th, .performance-facts__table--grid .thick-row th, .performance-facts__table .thick-row td, .performance-facts__table--small .thick-row td, .performance-facts__table--grid .thick-row td { border-top-width: 5px; } .small-info { font-size: 0.7rem; } .performance-facts__table--small { border-bottom: 1px solid #999; margin: 0 0 0.5rem 0; } .performance-facts__table--small thead tr { border-bottom: 1px solid black; } .performance-facts__table--small td:last-child { text-align: left; } .performance-facts__table--small th, .performance-facts__table--small td { border: 0; padding: 0; } .performance-facts__table--grid { margin: 0 0 0.5rem 0; } .performance-facts__table--grid td:last-child { text-align: left; } .performance-facts__table--grid td:last-child::before { font-weight: bold; margin: 0 0.25rem 0 0; } .text-center { text-align: center; } .thick-end { border-bottom: 10px solid black; } .thin-end { border-bottom: 1px solid black; } </style></head><body><section class="performance-facts"> <header class="performance-facts__header"> <h1 class="performance-facts__title">Nutrition Facts</h1> <p></p> </header> <table class="performance-facts__table"> <thead> <tr> <th colspan="5"> <b>Quantity: [QUANTITY]</b> </th> </tr> <tr> <th colspan="5"> <b>Portion: [PORTION]</b> </th> </tr> </thead> <tbody> <tr class="thick-row"> <td colspan="2"></td> <td class="small-info" style="text-align:right"> <b>100[UNIT]</b> </td> <td class="small-info" style="text-align:right"> <b>portion</b> </td> <td class="small-info"> <b>%*</b> </td> </tr> [NUTRIENTS_ITEMS] <tr class="thick-end"> <td class="blank-cell" colspan="5"></td> </tr> </tbody> </table> <table class="performance-facts__table--grid"> <tbody> [VITAMINS_ITEMS] <tr class="thin-end"> <td class="blank-cell" colspan="5"></td> </tr> </tbody> </table> <p class="small-info">* Percent Daily Values are  based on a 8400 kJ / 2000 kcal diet. Your daily values may be higher or lower depending on your calorie needs.</p></section></body></html>]]></string>
    <string name="settings_menu_item_about">"About us"</string>
    <string name="scanner_search_action">"Search"</string>
    <string name="scanner_scan_action">"Scan barcode"</string>
    <string name="scanner_clear_action">"Clear"</string>
    <string name="about_us_message">"This application allows you to scan a product's barcode and retrieve some details such as nutritional values, ingredients, and product pictures.

The data source of FoodScanner is The Open Food Repo service, an independent and community-driven open database for barcoded food products."</string>
    <string name="about_toolbar_title">"About us"</string>
    <string name="history_empty_message">"Currently empty !

But as soon as you find a product, it will show up in your search history and you can access it faster and offline."</string>

    <!-- Fuzzy -->
    <string name="settings_i18n_title">"Select language"</string>

    <!-- Fuzzy -->
    <string name="settings_menu_item_language">"Language"</string>
</resources>